Fixed range thumb was off by 2 pixels
The thumb visual on the range slider was off center by 2px.

--- a/tvjs/src/MediaPlayer/mediaplayer-1.0.0.0.css
+++ b/tvjs/src/MediaPlayer/mediaplayer-1.0.0.0.css
@@ -105,7 +105,6 @@ input[type=range]::-ms-thumb {
 }
 input[type=range]::-webkit-slider-thumb {
   -webkit-appearance: none;
-  margin-top: -4px;
   width: 24px;
   height: 8px;
   border-radius: 4px;
